Add getBasicQualityList